--- a/app/src/main/res/layout/article_list_item_layout.xml
+++ b/app/src/main/res/layout/article_list_item_layout.xml
@@ -13,6 +13,10 @@
         style="@style/AuthorStyle"/>
 
     <TextView
+        android:id="@+id/section"
+        style="@style/sectionStyle"/>
+
+    <TextView
         android:id="@+id/Date"
         style="@style/DateStyle"/>
 
